// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders 1`] = `
<label
  className="select"
>
  <select
    disabled={undefined}
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      Please select ...
    </option>
  </select>
</label>
`;

exports[`Select renders array of options 1`] = `
<label
  className="select"
>
  <select
    disabled={undefined}
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      Please select ...
    </option>
    <option
      value="s"
    >
      Small
    </option>
    <option
      value="m"
    >
      Medium
    </option>
    <option
      value="l"
    >
      Large
    </option>
  </select>
</label>
`;

exports[`Select renders array of options with "Small" option selected 1`] = `
<label
  className="select"
>
  <select
    disabled={undefined}
    onChange={[Function]}
    value="s"
  >
    <option
      value=""
    >
      Please select ...
    </option>
    <option
      value="s"
    >
      Small
    </option>
    <option
      value="m"
    >
      Medium
    </option>
    <option
      value="l"
    >
      Large
    </option>
  </select>
</label>
`;

exports[`Select renders children if specified 1`] = `
<label
  className="select"
>
  <select
    disabled={undefined}
    onChange={[Function]}
    value=""
  >
    <optgroup
      label="Group 1"
    >
      <option
        value="1.1"
      >
        Item 1.1
      </option>
      <option
        value="1.2"
      >
        Item 1.2
      </option>
      <option
        value="1.3"
      >
        Item 1.3
      </option>
    </optgroup>
    <optgroup
      label="Group 2"
    >
      <option
        value="2.1"
      >
        Item 2.1
      </option>
      <option
        value="2.2"
      >
        Item 2.2
      </option>
      <option
        value="2.3"
      >
        Item 2.3
      </option>
    </optgroup>
  </select>
</label>
`;

exports[`Select renders custom empty option label 1`] = `
<label
  className="select"
>
  <select
    disabled={undefined}
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      All
    </option>
    <option
      value="s"
    >
      Small
    </option>
    <option
      value="m"
    >
      Medium
    </option>
    <option
      value="l"
    >
      Large
    </option>
  </select>
</label>
`;

exports[`Select renders without empty option 1`] = `
<label
  className="select"
>
  <select
    disabled={undefined}
    onChange={[Function]}
    value=""
  >
    <option
      value="s"
    >
      Small
    </option>
    <option
      value="m"
    >
      Medium
    </option>
    <option
      value="l"
    >
      Large
    </option>
  </select>
</label>
`;

exports[`Select spreads unknown props to select 1`] = `
<label
  className="select"
>
  <select
    data-custom="on-select"
    disabled={undefined}
    name="thing"
    onChange={[Function]}
    value=""
  >
    <option
      value=""
    >
      Please select ...
    </option>
  </select>
</label>
`;
